--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,14 +7,135 @@ a {
   color: #00B7FF;
 }
 
+.row {
+margin-left: 90px;
+}
+
+.rowOfCards {
+  margin-left: 1px;
+}
+
 .questionCard {
-  width: 60px;
-  height: 120px;
-  background-color: #1C112B;
-  border-radius: 2px;
+  /*margin-left: 61%;*/
+  width: 355px;
+  height: 415px;
+  background-color: #FF7A68;
+  border-radius: 25px;
 }
 
 .questionGif {
-  width: 20px;
-  height: 20px;
+  margin-top: 9px;
+  margin-left: 59px;
+  width: 240px;
+  height: 210px;
+}
+.answerCard {
+  /*margin-left: 61%;*/
+  width: 355px;
+  height: 415px;
+  background-color: #FFFFFF;
+  border-radius: 25px;
+}
+
+.answerGif {
+  text-align: center;
+  width: 240px;
+  height: 210px;
+  margin-left: 59px;
+}
+
+.category {
+  margin-top: 47px;
+  text-align: center;
+  color: white;
+}
+
+.question {
+  text-align: center;
+  color: white;
+}
+.answerTitle{
+  color: #201B12;
+  text-align: center;
+  margin-bottom: -20px;
+}
+.answer{
+  color: #FD514F;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.initQuestionCard {
+  height: 220px;
+  background-color: #FF7A68;
+  border-radius: 25px;
+  margin-top: 15px;
+}
+
+.initQuestionGif {
+  margin-top: 18px;
+  margin-left: 46px;
+  width: 70px;
+  height: 59px;
+}
+
+.initCategory {
+  margin-top: 31px;
+  text-align: center;
+  color: white;
+}
+
+.initQuestion {
+  font-size: 10px;
+  text-align: center;
+  color: white;
+}
+
+.newCardButton{
+  margin-top: -159px;
+  margin-left: 531px;
+}
+/* entire container, keeps perspective */
+.flip-container {
+  margin-top: 9%;
+  margin-left: 27%;
+	perspective: 1000;
+}
+/* flip the pane when hovered */
+.flip-container:hover .flipper, .flip-container.hover .flipper {
+  transform: rotateY(180deg);
+}
+
+.flip-container, .front, .back {
+	width: 320px;
+	height: 480px;
+}
+
+/* flip speed goes here */
+.flipper {
+	transition: 0.8s;
+	transform-style: preserve-3d;
+
+	position: relative;
+}
+
+/* hide back of pane during swap */
+.front, .back {
+	backface-visibility: hidden;
+
+	position: absolute;
+	top: 0;
+	left: 0;
+}
+
+/* front pane, placed above back */
+.front {
+	z-index: 2;
+	/* for firefox 31 */
+	transform: rotateY(0deg);
+}
+
+/* back, initially hidden pane */
+.back {
+	transform: rotateY(180deg);
 }
