--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,27 +17,27 @@
   </head>
   <body ng-app='flashCardApp' ng-controller='cardCtrl'>
 
-    <a ng-model='showNavBar' ng-click='' class="waves-effect waves-light btn-large yellow accent-3"><i class="material-icons left">view_list</i>Add card</a>
+    <a ng-click='navBar()' class="waves-effect waves-light btn-large yellow accent-3 showNavBar" ng-hide='showNavBar'><i class="material-icons left">view_list</i>Add card</a>
 
-    <div class="container">
+    <div class="container navContainer" ng-hide='navContainer'>
       <div class="row">
         <form class="col s12 newAlbumForm" ng-hide='newAlbumForm'>
 
           <div class="input-field col s4">
-            <input ng-model='categoryInput' id="categoryInput" type="text" class="validate white-text">
+            <input ng-model='newCard.category' id="categoryInput" type="text" class="validate black-text">
             <label>Category</label>
           </div>
           <div class="input-field col s4">
-            <input ng-model='questionInput' id="questionInput" type="text" class="validate white-text">
+            <input ng-model='newCard.question' id="questionInput" type="text" class="validate black-text">
             <label>Question</label>
           </div>
 
             <div class="input-field col s3">
-              <input id="comment" type="text" class="validate white-text">
+              <input ng-model='newCard.answer' id="comment" type="text" class="validate black-text">
               <label>Answer</label>
             </div>
 
-            <a ng-model='addCardButton' ng-click='' class="addButton btn-floating btn-large waves-effect waves-light yellow accent-3"><i class="material-icons">add</i></a>
+            <a ng-model='addCardButton' ng-click='addCard()' class="addButton btn-floating btn-large waves-effect waves-light yellow accent-3"><i class="material-icons">add</i></a>
         </form>
       </div>
     </div>
@@ -49,12 +49,13 @@
 
     <div class="container-fluid">
       <div class="row" style="margin-left: 90px">
-        <div class='col s2' ng-repeat='card in list' repeat-done='initModals()'>
+        <div class='col s2' ng-repeat='card in list track by $index' repeat-done='initModals()'>
           <div class='initQuestionCard z-depth-3 modal-trigger' href="#modal1">
             <img class='initQuestionGif' src="http://bit.ly/1polRSn" alt="?"/>
             <p class='initCategory'>{{card.category}}</p>
             <p class='initQuestion'>{{card.question}}</p>
           </div>
+          <a ng-model='deleteButton' ng-click='deleteCard(card, card.id)' class="deleteButton btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a>
         </div>
       </div>
     </div>
@@ -110,8 +111,8 @@
           </div>
       </div>
       <div class="modal-footer">
-        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Update</a>
         <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">cancel</a>
+        <a href="#!" class=" modal-action modal-close waves-effect waves-green btn-flat">Update</a>
       </div>
     </div>
 
